Update 'Course: Joining Data with pandas'

--- a/joining-data-with-pandas/joining-data-with-pandas.ipynb
+++ b/joining-data-with-pandas/joining-data-with-pandas.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,8 +84,8 @@
    "source": [
     "# edited/added\n",
     "import pandas as pd\n",
-    "taxi_owners = pd.read_pickle(\"taxi_owners.p\")\n",
-    "taxi_veh = pd.read_pickle(\"taxi_vehicles.p\")\n",
+    "taxi_owners = pd.read_pickle('taxi_owners.p')\n",
+    "taxi_veh = pd.read_pickle('taxi_vehicles.p')\n",
     "\n",
     "# Merge the taxi_owners and taxi_veh tables\n",
     "taxi_own_veh = taxi_owners.merge(taxi_veh, on='vid')\n",
@@ -276,8 +277,8 @@
    ],
    "source": [
     "# edited/added\n",
-    "licenses = pd.read_pickle(\"licenses.p\")\n",
-    "biz_owners = pd.read_pickle(\"business_owners.p\")\n",
+    "licenses = pd.read_pickle('licenses.p')\n",
+    "biz_owners = pd.read_pickle('business_owners.p')\n",
     "\n",
     "# Merge the licenses and biz_owners table on account\n",
     "licenses_owners = licenses.merge(biz_owners, on='account')\n",
@@ -342,9 +343,9 @@
    ],
    "source": [
     "# edited/added\n",
-    "ridership = pd.read_pickle(\"cta_ridership.p\")\n",
-    "cal = pd.read_pickle(\"cta_calendar.p\")\n",
-    "stations = pd.read_pickle(\"stations.p\")\n",
+    "ridership = pd.read_pickle('cta_ridership.p')\n",
+    "cal = pd.read_pickle('cta_calendar.p')\n",
+    "stations = pd.read_pickle('stations.p')\n",
     "\n",
     "# Merge the ridership and cal tables\n",
     "ridership_cal = ridership.merge(cal, on=['year','month','day'])\n",
@@ -449,9 +450,9 @@
    ],
    "source": [
     "# edited/added\n",
-    "wards = pd.read_pickle(\"ward.p\")\n",
-    "licenses = pd.read_pickle(\"licenses.p\")\n",
-    "zip_demo = pd.read_pickle(\"zip_demo.p\")\n",
+    "wards = pd.read_pickle('ward.p')\n",
+    "licenses = pd.read_pickle('licenses.p')\n",
+    "zip_demo = pd.read_pickle('zip_demo.p')\n",
     "\n",
     "# Merge licenses and zip_demo, on zip; and merge the wards on ward\n",
     "licenses_zip_ward = licenses.merge(zip_demo, on='zip') \\\n",
@@ -512,7 +513,7 @@
    ],
    "source": [
     "# edited/added\n",
-    "land_use = pd.read_pickle(\"land_use.p\").astype(str)\n",
+    "land_use = pd.read_pickle('land_use.p').astype(str)\n",
     "\n",
     "# Merge land_use and census and merge result with licenses including suffixes\n",
     "land_cen_lic = land_use.merge(census, on='ward').merge(licenses, on='ward', suffixes=('_cen','_lic'))\n",
@@ -575,8 +576,8 @@
    ],
    "source": [
     "# edited/added\n",
-    "movies = pd.read_pickle(\"movies.p\").astype(str)\n",
-    "financials = pd.read_pickle(\"financials.p\").astype(str)\n",
+    "movies = pd.read_pickle('movies.p').astype(str)\n",
+    "financials = pd.read_pickle('financials.p').astype(str)\n",
     "\n",
     "# Merge movies and financials with a left join\n",
     "movies_financials = movies.merge(financials, on='id', how='left')\n",
@@ -645,8 +646,8 @@
    ],
    "source": [
     "# edited/added\n",
-    "toy_story = movies[movies['title'].str.contains(\"Toy Story\")]\n",
-    "taglines = pd.read_pickle(\"taglines.p\").astype(str)\n",
+    "toy_story = movies[movies['title'].str.contains('Toy Story')]\n",
+    "taglines = pd.read_pickle('taglines.p').astype(str)\n",
     "\n",
     "# Merge the toy_story and taglines tables with a left join\n",
     "toystory_tag = toy_story.merge(taglines, on='id', how='left')\n",
@@ -755,7 +756,7 @@
    ],
    "source": [
     "# edited/added\n",
-    "movie_to_genres = pd.read_pickle(\"movie_to_genres.p\").astype(str)\n",
+    "movie_to_genres = pd.read_pickle('movie_to_genres.p').astype(str)\n",
     "action_movies = movie_to_genres[movie_to_genres['genre'] == 'Action']\n",
     "scifi_movies = movie_to_genres[movie_to_genres['genre'] == 'Science Fiction']\n",
     "\n",
@@ -960,7 +961,7 @@
    ],
    "source": [
     "# edited/added\n",
-    "crews = pd.read_pickle(\"crews.p\").astype(str)\n",
+    "crews = pd.read_pickle('crews.p').astype(str)\n",
     "\n",
     "# Merge the crews table to itself\n",
     "crews_self_merged = crews.merge(crews, on='id', how='inner', suffixes=('_dir','_crew'))\n",
@@ -1031,7 +1032,7 @@
    ],
    "source": [
     "# edited/added\n",
-    "ratings = pd.read_pickle(\"ratings.p\").astype(str)\n",
+    "ratings = pd.read_pickle('ratings.p').astype(str)\n",
     "\n",
     "# Merge to the movies table the ratings table on the index\n",
     "movies_ratings = movies.merge(ratings, on='id', how='left')\n",
@@ -1078,7 +1079,7 @@
    "outputs": [],
    "source": [
     "# edited/added\n",
-    "sequels = pd.read_pickle(\"sequels.p\").astype(str)\n",
+    "sequels = pd.read_pickle('sequels.p').astype(str)\n",
     "\n",
     "# Merge sequels and financials on index id\n",
     "sequels_fin = sequels.merge(financials, on='id', how='left')\n",
